fix: align th horizontal padding with td (16px) to fix column misalignment

--- a/XTableServer/XTableServer.scss
+++ b/XTableServer/XTableServer.scss
@@ -13,6 +13,8 @@
     }
     th {
       background-color: $table-thead-bg-color;
+      padding-left: 16px;
+      padding-right: 16px;
     }
   }
 
